# mtl-file-parser

./: LICENSE  README.md  mtl-file-parser.cabal
app/: Main.hs
