name:                mtl-file-parser
version:             0.1.0.0
synopsis:            Refactoring Josh Clayton's 'file-fun' monad transformer example
description:         See README.md
homepage:            https://github.com/jkachmar/mtl-file-parser/
license:             MIT
license-file:        LICENSE
author:              Joe Kachmar
maintainer:          joseph.kachmar@gmail.com
copyright:           2016 Joe Kachmar
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

executable  file-parser
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , optparse-applicative

source-repository head
  type:     git
  location: https://github.com/jkachmar/mtl-file-parser
